@@ -1128,7 +1128,7 @@ right now).
 
 
 @deftypefun int MHD_get_connection_values (struct MHD_Connection *connection, enum MHD_ValueKind kind, MHD_KeyValueIterator iterator, void *iterator_cls)
-Get all the headers matching @var{kind} from the request.
+Get all the headers matching @var{kind} from the request.  
 
 The @var{iterator} callback is invoked once for each header, with
 @var{iterator_cls} as first argument. Return the number of entries
@@ -1137,13 +1137,22 @@ iterating, @var{iterator} returns @code{MHD_NO}.
 
 @var{iterator} can be @mynull{}: in this case this function just counts
 and returns the number of headers.
+
+In the case of @code{MHD_GET_ARGUMENT_KIND}, the @var{value} argument
+will be NULL if the URL contained a key without an equals operator.
+For example, for a HTTP request to the URL ``http://foo/bar?key'', the
+@var{value} argument is NULL; in contrast, a HTTP request to the URL
+``http://foo/bar?key='', the @var{value} argument is the empty string.
+The normal case is that the URL contains ``http://foo/bar?key=value''
+in which case @var{value} would be the string ``value'' and @var{key}
+would contain the string ``key''.
 @end deftypefun
 
 
 @deftypefun int MHD_set_connection_value (struct MHD_Connection *connection, enum MHD_ValueKind kind, const char * key, const char * value)
 This function can be used to add an entry to
 the HTTP headers of a connection (so that the 
-MHD_get_connection_values function will return
+@code{MHD_get_connection_values function} will return
 them -- and the MHD PostProcessor will also 
 see them).  This maybe required in certain
 situations (see Mantis #1399) where (broken)
